Added chifra nodes tool
