# src/apps/chifra/server/routes.go
@@ -24,6 +24,7 @@ import (
 	logsPkg "github.com/TrueBlocks/trueblocks-core/src/apps/chifra/internal/logs"
 	monitorsPkg "github.com/TrueBlocks/trueblocks-core/src/apps/chifra/internal/monitors"
 	namesPkg "github.com/TrueBlocks/trueblocks-core/src/apps/chifra/internal/names"
+	nodePkg "github.com/TrueBlocks/trueblocks-core/src/apps/chifra/internal/node"
 	receiptsPkg "github.com/TrueBlocks/trueblocks-core/src/apps/chifra/internal/receipts"
 	scrapePkg "github.com/TrueBlocks/trueblocks-core/src/apps/chifra/internal/scrape"
 	slurpPkg "github.com/TrueBlocks/trueblocks-core/src/apps/chifra/internal/slurp"
@@ -180,6 +181,15 @@ func RouteInit(w http.ResponseWriter, r *http.Request) {
 	}
 }
 
+// RouteNode Initalize and control long-running tools such as the API, scrapers, and monitors.
+func RouteNode(w http.ResponseWriter, r *http.Request) {
+	if err, handled := nodePkg.ServeNode(w, r); err != nil {
+		RespondWithError(w, http.StatusInternalServerError, err)
+	} else if !handled {
+		CallOne(w, r, config.GetPathToCommands("node"), "", "node")
+	}
+}
+
 // RouteExplore Open a local or remote explorer for one or more addresses, blocks, or transactions.
 func RouteExplore(w http.ResponseWriter, r *http.Request) {
 	if err, handled := explorePkg.ServeExplore(w, r); err != nil {
@@ -228,6 +238,7 @@ var routes = Routes{
 	Route{"RouteScrape", "GET", "/scrape", RouteScrape},
 	Route{"RouteChunks", "GET", "/chunks", RouteChunks},
 	Route{"RouteInit", "GET", "/init", RouteInit},
+	Route{"RouteNode", "GET", "/node", RouteNode},
 	Route{"RouteExplore", "GET", "/explore", RouteExplore},
 	Route{"RouteSlurp", "GET", "/slurp", RouteSlurp},
 	// END_ROUTE_ITEMS
